K8S/app-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loadtestingapp
  template:
    metadata:
      labels:
        app: loadtestingapp
    spec:
      containers:
        - name: loadtestingapp
          image: ostashev/xafloadtesting:latest
---
apiVersion: v1
kind: Service
metadata:
  name: app-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: loadtestingapp
  ports:
    - name: loadtestingapp
      protocol: TCP
      port: 80
      targetPort: 80
